--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,110 +147,8 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-#header .subscribe {
-  font-size: 15px;
-  text-align: center;
-}
-
-#header .subscribe h4 {
-  font-size: 20px;
-  font-weight: 600;
-  color: #fff;
-  position: relative;
-  padding-bottom: 12px;
-}
-
-#header .subscribe .subscribe-form {
-  min-width: 300px;
-  margin-top: 10px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 50px;
-  text-align: left;
-}
-
-#header .subscribe .subscribe-form input[type="email"] {
-  border: 0;
-  padding: 4px 8px;
-  width: calc(100% - 100px);
-}
-
-#header .subscribe .subscribe-form input[type="submit"] {
-  position: absolute;
-  top: 0;
-  right: -2px;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #24b7a4;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-#header .subscribe .subscribe-form input[type="submit"]:hover {
-  background: #22ae9c;
-}
-
-#header .subscribe .error-message {
-  display: none;
-  color: #ed3c0d;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-#header .subscribe .sent-message {
-  display: none;
-  color: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-#header .subscribe .loading {
-  display: none;
-  text-align: center;
-  padding: 15px;
-}
-
-#header .subscribe .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading-notify 1s linear infinite;
-  animation: animate-loading-notify 1s linear infinite;
-}
-
-@-webkit-keyframes animate-loading-notify {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes animate-loading-notify {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 #header .social-links {
-  margin-top: 40px;
+  margin-top: 300px;
 }
 
 #header .social-links a {
@@ -540,46 +438,6 @@ section {
   margin-bottom: 0;
 }
 
-/*--------------------------------------------------------------
-# Contact Us
---------------------------------------------------------------*/
-.about .icon-box {
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.about .icon {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 15px;
-}
-
-.about .icon i {
-  color: #fff;
-  font-size: 42px;
-  line-height: 0;
-}
-
-.about .title {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
-  text-transform: uppercase;
-}
-
-.about .title a {
-  color: #fff;
-  transition: 0.3s;
-}
-
-.about .description {
-  line-height: 24px;
-  font-size: 14px;
-}
-
-/*--------------------------------------------------------------
-# Contact Us
---------------------------------------------------------------*/
 .contact .info {
   border-top: 3px solid #24b7a4;
   border-bottom: 3px solid #24b7a4;
@@ -761,7 +619,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  margin-top: 167px;
+  margin-top: 115px;
   background: rgba(38, 55, 69, 0.4);
   padding: 30px 0;
   color: #fff;
@@ -782,4 +640,152 @@ section {
 
 #footer .credits a {
   color: #36d8c3;
+}
+::selection{
+  color: #fff;
+  background: rgb(142,197,252);
+}
+.show-btn, .wrapper{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+}
+.show-btn{
+  color: rgb(142,197,252);
+  padding: 13px 18px;
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.wrapper{
+  z-index: 5;
+  margin-top: 100px;
+  background:none;
+  padding: 30px;
+  text-align: center;
+  max-width: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: 50%;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.3s ease;
+}
+#toggle{
+  display: none;
+}
+#toggle:checked ~ .wrapper{
+  opacity: 0;
+  pointer-events: none;
+  top: 40%;
+}
+.wrapper .cancel-icon{
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  color: rgb(142,197,252);
+  cursor: pointer;
+}
+.cancel-icon:hover{
+  color: rgb(224,195,252);
+}
+.wrapper .icon{
+  height: 110px;
+  width: 110px;
+  background: linear-gradient(136deg, rgb(224,195,252) 0%, rgb(142,197,252) 100%);
+  line-height: 110px;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 55px;
+}
+.wrapper .content{
+  margin: 20px 0;
+}
+.content h2{
+  font-size: 30px;
+  font-weight: 600;
+}
+.content p{
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: -3px;
+}
+form{
+  width: 98%;
+}
+form .field{
+  height: 45px;
+  width: 100%;
+  margin-bottom: 12px;
+}
+form .field input{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 0 15px;
+  outline: none;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+form .field input:focus{
+  border-color: rgb(142,197,252);
+}
+form .btn{
+  height: 47px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px;
+}
+form .btn .layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: linear-gradient(136deg, rgb(224,195,252) 0%, rgb(142,197,252) 100%);
+  transition: all 0.4s ease;
+}
+form .btn:hover .layer{
+  left: 0;
+}
+form .btn button{
+  z-index: 1;
+  position: relative;
+  background: none;
+  padding: 0px!important;
+  color: #fff;
+  border: 0px;
+  outline: none;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+.wrapper .text{
+  margin-top: 5px;
+}
+.alert{
+  margin: -9px 0 12px 0;
+  padding: 10px;
+  border-radius: 5px;
+}
+.success-alert{
+  color: #155724;
+  background: #d4edda;
+  border: 1px solid #c3e6cb;
+}
+.error-alert{
+  color: #721c24;
+  background: #f8d7da;
+  border: 1px solid #f5c6cb;
 }
